istio/deployments.yaml
################################################################################
# Hello 1
################################################################################
apiVersion: v1
kind: Service
metadata:
  name: hello-1
  labels:
    app: hello-1
    service: hello-1
spec:
  selector:
    app: hello-1
  ports:
    - port: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-1-v1
  labels:
    app: hello-1
    version: v1
    "devenv/type": baseline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-1
      version: v1
  template:
    metadata:
      labels:
        app: hello-1
        version: v1
    spec:
      containers:
        - name: hello-1
          image: hello:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-1-v2
  labels:
    app: hello-1
    version: v2
    "devenv/type": feature
    "devenv/feature": version2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-1
      version: v2
  template:
    metadata:
      labels:
        app: hello-1
        version: v2
    spec:
      containers:
        - name: hello-1
          image: hello:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
################################################################################
# Hello 2
################################################################################
apiVersion: v1
kind: Service
metadata:
  name: hello-2
  labels:
    app: hello-2
    service: hello-2
spec:
  selector:
    app: hello-2
  ports:
    - port: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-2-v1
  labels:
    app: hello-2
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-2
      version: v1
  template:
    metadata:
      labels:
        app: hello-2
        version: v1
    spec:
      containers:
        - name: hello-2
          image: hello:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-2-v2
  labels:
    app: hello-2
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-2
      version: v2
  template:
    metadata:
      labels:
        app: hello-2
        version: v2
    spec:
      containers:
        - name: hello-2
          image: hello:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
