istio/baseline.yaml
--- # Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
--- # Hello 1 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-1-baseline
  labels:
    app: hello-1
    version: baseline
    "devenv/version": baseline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-1
      version: baseline
  template:
    metadata:
      labels:
        app: hello-1
        version: baseline
    spec:
      containers:
        - name: hello-1
          image: hello:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
--- # Hello 1 Service
apiVersion: v1
kind: Service
metadata:
  name: hello-1
  labels:
    app: hello-1
    service: hello-1
spec:
  selector:
    app: hello-1
  ports:
    - port: 8080
      name: http
--- # Hello 1 DR
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-1
spec:
  host: hello-1
  subsets:
    - name: baseline
      labels:
        version: baseline
--- # Hello 1 VS
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-1
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway
  http:
    - route:
        - destination:
            host: hello-1
            subset: baseline
--- # Hello 2 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-2-baseline
  labels:
    app: hello-2
    version: baseline
    "devenv/version": baseline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-2
      version: baseline
  template:
    metadata:
      labels:
        app: hello-2
        version: baseline
    spec:
      containers:
        - name: hello-2
          image: hello:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
--- # Hello 2 Service
apiVersion: v1
kind: Service
metadata:
  name: hello-2
  labels:
    app: hello-2
    service: hello-2
spec:
  selector:
    app: hello-2
  ports:
    - port: 8080
      name: http
--- # Hello 2 DR
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-2
spec:
  host: hello-2
  subsets:
    - name: baseline
      labels:
        version: baseline
--- # Hello 2 VS
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-2
spec:
  hosts:
    - hello-2
  http:
    - route:
        - destination:
            host: hello-2
            subset: baseline
---
